--- a/templates/elects.htm
+++ b/templates/elects.htm
@@ -12,7 +12,7 @@
     <title>Elects</title>
 </head>
 <body>
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<nav class="navbar navbar-expand navbar-light bg-light">
         <a class="navbar-brand" href="{{url_for('index')}}">Elections website</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,14 +23,14 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{{url_for('index')}}">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Show results</a>
-                </li>
+       
             </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0" action="{{url_for('login')}}", method='GET'>
             <input style="margin-right: 400px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button style="margin-right: 400px;" class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-            <button class="btn btn-primary">Login</button>
+            <button style="margin-right: 400px;" class="btn btn-outline-primary my-2 my-sm-0">Search</button>
+            <button type="submit" class="btn btn-primary">Login</button>
+            <a href="{{url_for('register')}}"type="submit">&nbsp;Don't have an account yet?</a>
+
         </form>
     </div>
 </nav>
@@ -38,27 +38,32 @@
     <div class="row">
     <h2><strong>Elects</strong></h2>
     </div>
+    <div class="col-sm-4">
+        <p class="alert alert-warning"><small><strong>Login to add new elects!</strong></small></p>
+    </div>
+
     <div class="row" style="margin: 15px;">
         <div class="col-sm-8">
-            {% for elect in elects %}
-            <div class="media hover-to-show-content elect">
-                <img class="d-flex mr-3 rounded-circle" style="height: 100px; width: 100px;" src="../static/pics/{{ elect.image }}" alt="Generic placeholder image">
-                <div class="media-body">
-                    <h5 class=" mt-0 font-weight-bold hover">{{elect.name}}</h5>
-                    <p class="hover-to-show">
-                        {{elect.description}}
-                    </p>
+                {% for elect in elects %}
+
+                <div class="media hover-to-show-content elect">
+                    <img class="d-flex mr-3 rounded-circle" style="height: 100px; width: 100px;" src="../static/pics/{{ elect.image }}" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class=" mt-0 font-weight-bold hover">{{elect.name}}</h5>
+                        <p class="hover-to-show">
+                            {{elect.description}}
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <br>
-            <hr>
-            {% endfor %}
+                <br>
+                <hr>
+                {% endfor %}
             <br>
         </div>
     </div>
 </div>
        
-<footer class = "footer" style="background: lightgoldenrodyellow; color: #333333; margin-top: 20%; padding-bottom: 0px;">
+<footer class = "footer myfooter" style="background: lightgoldenrodyellow; color: #333333; margin-top: 20%; padding-bottom: 0px;">
     <div class = "container">
         <div class = "row justify-content-center">
             <div class = "col-auto col-sm-auto">
